<?xml version="1.0"?>
<package>
    <name>libvis</name>
    <version>0.0.0</version>
    <description>libvis package by Thomas Schöps</description>

    <maintainer email="user@todo.todo">user</maintainer>
    <license>BSD</license>

    <run_depend>catkin</run_depend>
    <buildtool_depend>cmake</buildtool_depend>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>